--- a/index.html
+++ b/index.html
@@ -17,33 +17,34 @@
 
 <body>
 
-    <div class="container" id="masthead">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #ffffff;">
-            <a class="navbar-brand" href="index.html" id="logo"><h1>Ben Taylor</h1></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
-            </div>
-        </nav>
-    </div>
-
+    <header id="masthead">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #ffffff;">
+                <a class="navbar-brand" href="index.html" id="logo">Ben Taylor</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                    <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
     <div class="container" style="margin-top: 20px; margin-bottom: 20px;">
         <section class="main-section">
         <h3>About Me</h3>
 
-            <img src="assets/images/self.jpeg" class="auth-image" alt="Your Name" style="float: left; margin-right: 20px;">
+            <img src="assets/images/self.jpeg" class="auth-image" alt="Your Name" style="float: left; margin-right: 20px; margin-top:20px;">
       
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
       
@@ -60,7 +61,7 @@
     </div>
 
 
-    <footer>
+    <footer class="footer">
             <div class="container">
               Copyright &copy; 
             </div>
