Added link to hangman git pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,8 +58,8 @@
 
                     <!-- Bootstrap Column -->
                     <div class="col-md-4">
-                        <img src="assets/images/technics-q-c-640-480-1.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
-                        <h3 class="work">Hangman</h3>
+                        <a href="https://spartancarm1ne.github.io/Word-Guess-Game/" target="_blank"><img src="assets/images/technics-q-c-640-480-1.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
+                        <h3 class="work">Hangman</h3></a>
                     </div>
             
                 <!-- Bootstrap Column -->
