--- a/portfolio.html
+++ b/portfolio.html
@@ -64,8 +64,8 @@
             
                 <!-- Bootstrap Column -->
                     <div class="col-md-4">
-                        <img src="assets/images/technics-q-c-640-480-2.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
-                        <h3 class="work">RPG Game</h3>
+                        <a href="https://spartancarm1ne.github.io/unit-4-game/" target="_blank"><img src="assets/images/technics-q-c-640-480-2.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
+                        <h3 class="work">Crystal Collector</h3></a>
                     </div>
             
                 </div>
