--- a/portfolio.html
+++ b/portfolio.html
@@ -76,8 +76,8 @@
 
                     <!-- Bootstrap Column -->
                     <div class="col-md-4">
-                        <img src="assets/images/technics-q-c-640-480-5.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
-                        <h3 class="work">Trivia Game</h3> 
+                        <a href="https://spartancarm1ne.github.io/TriviaGame/" target="_blank"><img src="assets/images/technics-q-c-640-480-5.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
+                        <h3 class="work">Trivia Game</h3> </a>
                     </div>
 
                     <!-- Bootstrap Column -->
