--- a/portfolio.html
+++ b/portfolio.html
@@ -82,8 +82,8 @@
 
                     <!-- Bootstrap Column -->
                     <div class="col-md-4">
-                        <img src="assets/images/technics-q-c-640-480-7.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
-                        <h3 class="work">Rutgers Info Widget</h3>
+                        <a href="https://spartancarm1ne.github.io/giftastic/" target="_blank"><img src="assets/images/technics-q-c-640-480-7.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
+                        <h3 class="work">Giftastic</h3></a>
                     </div>
 
                 </div>
