added link to vg hypeman

--- a/portfolio.html
+++ b/portfolio.html
@@ -97,6 +97,11 @@
                         <img src="assets/images/technics-q-c-640-480-9.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
                         <h3 class="work">Rock Paper Scissors</h3>
                     </div>
+
+                    <div class="col-md-4">
+                        <a href="https://matthewbryantdonovan.github.io/ProjectOne/" target="_blank"><img src="assets/images/technics-q-c-640-480-9.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
+                        <h3 class="work">VG Hypeman</h3></a>
+                    </div>
                         
                 </div>
                 <!-- End of Bootstrap Row -->
