added link to vghypeman v2

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,6 +102,11 @@
                         <a href="https://matthewbryantdonovan.github.io/ProjectOne/" target="_blank"><img src="assets/images/technics-q-c-640-480-9.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
                         <h3 class="work">VG Hypeman</h3></a>
                     </div>
+
+                    <div class="col-md-4">
+                        <a href="https://vghypeman.herokuapp.com/" target="_blank"><img src="assets/images/technics-q-c-640-480-9.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
+                        <h3 class="work">VG Hypeman Version 2</h3></a>
+                    </div>
                         
                 </div>
                 <!-- End of Bootstrap Row -->
