Added train time to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,6 +86,12 @@
                         <h3 class="work">Giftastic</h3></a>
                     </div>
 
+                    <div class="col-md-4">
+                        <a href="https://bentaylorgit.github.io/traintime/" target="_blank"><img src="assets/images/technics-q-c-640-480-7.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
+                        <h3 class="work">Train Time</h3></a>
+                    </div>
+
+
                 </div>
                 <!-- End of Bootstrap Row -->
 
