--- a/portfolio.html
+++ b/portfolio.html
@@ -67,6 +67,11 @@
                         <a href="https://spartancarm1ne.github.io/unit-4-game/" target="_blank"><img src="assets/images/technics-q-c-640-480-2.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
                         <h3 class="work">Crystal Collector</h3></a>
                     </div>
+
+                    <div class="col-md-4">
+                        <a href="https://github.com/BenTaylorGit/liri-node-app" target="_blank"><img src="assets/images/technics-q-c-640-480-2.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
+                        <h3 class="work">Liri Bot</h3></a>
+                    </div>
             
                 </div>
                 <!-- End of Bootstrap Row -->
