added link to Bamazon and updated previous links to use new github repo name

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,13 +58,13 @@
 
                     <!-- Bootstrap Column -->
                     <div class="col-md-4">
-                        <a href="https://spartancarm1ne.github.io/Word-Guess-Game/" target="_blank"><img src="assets/images/technics-q-c-640-480-1.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
+                        <a href="https://bentaylorgit.github.io/Word-Guess-Game/" target="_blank"><img src="assets/images/technics-q-c-640-480-1.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
                         <h3 class="work">Hangman</h3></a>
                     </div>
             
                 <!-- Bootstrap Column -->
                     <div class="col-md-4">
-                        <a href="https://spartancarm1ne.github.io/unit-4-game/" target="_blank"><img src="assets/images/technics-q-c-640-480-2.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
+                        <a href="https://bentaylorgit.github.io/unit-4-game/" target="_blank"><img src="assets/images/technics-q-c-640-480-2.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
                         <h3 class="work">Crystal Collector</h3></a>
                     </div>
 
@@ -81,13 +81,13 @@
 
                     <!-- Bootstrap Column -->
                     <div class="col-md-4">
-                        <a href="https://spartancarm1ne.github.io/TriviaGame/" target="_blank"><img src="assets/images/technics-q-c-640-480-5.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
+                        <a href="https://bentaylorgit.github.io/TriviaGame/" target="_blank"><img src="assets/images/technics-q-c-640-480-5.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
                         <h3 class="work">Trivia Game</h3> </a>
                     </div>
 
                     <!-- Bootstrap Column -->
                     <div class="col-md-4">
-                        <a href="https://spartancarm1ne.github.io/giftastic/" target="_blank"><img src="assets/images/technics-q-c-640-480-7.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
+                        <a href="https://bentaylorgit.github.io/giftastic/" target="_blank"><img src="assets/images/technics-q-c-640-480-7.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
                         <h3 class="work">Giftastic</h3></a>
                     </div>
 
@@ -95,7 +95,11 @@
                         <a href="https://bentaylorgit.github.io/traintime/" target="_blank"><img src="assets/images/technics-q-c-640-480-7.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
                         <h3 class="work">Train Time</h3></a>
                     </div>
-
+                    
+                    <div class="col-md-4">
+                        <a href="https://github.com/BenTaylorGit/bamazon" target="_blank"><img src="assets/images/technics-q-c-640-480-7.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
+                        <h3 class="work">Bamazon</h3></a>
+                    </div>
 
                 </div>
                 <!-- End of Bootstrap Row -->
