--- a/portfolio.html
+++ b/portfolio.html
@@ -122,6 +122,11 @@
                         <a href="https://vghypeman.herokuapp.com/" target="_blank"><img src="assets/images/technics-q-c-640-480-9.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
                         <h3 class="work">VG Hypeman Version 2</h3></a>
                     </div>
+
+                    <div class="col-md-4">
+                        <a href="https://shielded-mountain-19210.herokuapp.com/" target="_blank"><img src="assets/images/technics-q-c-640-480-9.jpg" class="portImage" style="margin-bottom: 20px; margin-top:20px;">
+                        <h3 class="work">Friend Finder</h3></a>
+                    </div>
                         
                 </div>
                 <!-- End of Bootstrap Row -->
