update port images

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <h3>About Me</h3>
 
-                <img src="assets/images/self.jpeg" class="auth-image" alt="Your Name"
+                <img src="assets/images/me.jpg" class="auth-image" alt="Your Name"
                     style="float: left; margin-right: 20px; margin-top:20px;">
 
                 <p>Hello World! My name is Ben. I graduated from the University of Central Florida with B.A. in Digital Media in the spring of 2018. I work a full time job of forty plus hours a week as the Head of eCommerce for Walmart.</p>
